Sec49_Assn47-XXX: test code optimization